--- a/sourcecode/Euston_Leisure_Messaging/Euston_Leisure_Messaging/Euston_Leisure_Messaging.csproj
+++ b/sourcecode/Euston_Leisure_Messaging/Euston_Leisure_Messaging/Euston_Leisure_Messaging.csproj
@@ -65,8 +65,15 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Message_input.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Message_input.xaml.cs">
+      <DependentUpon>Message_input.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
